--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -11,7 +11,7 @@
      <br>
    
 
-    <img style="width: 65%;margin-left: 19%;border-radius: 10px;opacity: 1;" src="assets/address.jpg" alt="Image not available">
+    <img style="width: 65%;margin-left: 19%;border-radius: 10px;opacity: 1;" src="assets/address.png" alt="Image not available">
     <br>
 
     
